Fixing jumpy out-of-stock

--- a/skin/frontend/juvi/default/scss/_productview.scss
+++ b/skin/frontend/juvi/default/scss/_productview.scss
@@ -37,8 +37,12 @@
 			letter-spacing: $spacing+1;
 			line-height: 200%;
 		}
-		.availability.in-stock {
-			display: none;
+		.availability {
+			font-size: 12px;
+			padding: 0;
+			&.in-stock {
+				color: transparent;
+			}
 		}
 	}
 	.product-img-box {
